<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search_hint"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/action_theme"
        android:icon="@drawable/ic_dark_mode"
        android:title="Сменить тему"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_export"
        android:title="@string/action_export"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_import"
        android:title="@string/action_import"
        app:showAsAction="never" />

</menu>
